https://www.elastic.co/guide/en/apm/agent/java/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.13.0]]
==== 1.13.0 (Next)

[float]
===== Features
* Add support for <<supported-databases, Redis Lettuce client>>

[float]
===== Bug Fixes
* Fix parsing value of `trace_methods` configuration property {pull}930[#930]
* Workaround for `java.util.logging` deadlock {pull}965[#965]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.12.0]]
==== 1.12.0 - 2019/11/21

[float]
===== Features
* JMS Enhancements {pull}911[#911]:
** Add special handling for temporary queues/topics
** Capture message bodies of text Messages
*** Rely on the existing `ELASTIC_APM_CAPTURE_BODY` agent config option (off by default).
*** Send as `context.message.body`
*** Limit size to 10000 characters. If longer than this size, trim to 9999 and append with ellipsis
** Introduce the `ignore_message_queues` configuration to disable instrumentation (message tagging) for specific 
      queues/topics as suggested in {pull}710[#710]
** Capture predefined message headers and all properties
*** Rely on the existing `ELASTIC_APM_CAPTURE_HEADERS` agent config option.
*** Send as `context.message.headers`
*** Sanitize sensitive headers/properties based on the `sanitize_field_names` config option
* Added support for the MongoDB sync driver. See https://www.elastic.co/guide/en/apm/agent/java/master/supported-technologies-details.html#supported-databases[supported data stores].

[float]
===== Bug Fixes
* JDBC regression- `PreparedStatement#executeUpdate()` and `PreparedStatement#executeLargeUpdate()` are not traced {pull}918[#918]
* When systemd cgroup driver is used, the discovered Kubernetes pod UID contains "_" instead of "-" {pull}920[#920]